
find_package(Python3 REQUIRED COMPONENTS Interpreter)

macro(pnnx_onnx_add_test name)
    add_test(NAME test_onnx_${name} COMMAND ${CMAKE_COMMAND} -DPYTHON_EXECUTABLE=${Python3_EXECUTABLE} -DPYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/test_${name}.py -P ${CMAKE_CURRENT_SOURCE_DIR}/../run_test.cmake)
endmacro()

pnnx_onnx_add_test(F_avg_pool1d)
pnnx_onnx_add_test(F_avg_pool2d)
pnnx_onnx_add_test(F_avg_pool3d)
pnnx_onnx_add_test(F_batch_norm)
pnnx_onnx_add_test(F_conv_transpose1d)
pnnx_onnx_add_test(F_conv_transpose2d)
pnnx_onnx_add_test(F_conv_transpose3d)
pnnx_onnx_add_test(F_conv1d)
pnnx_onnx_add_test(F_conv2d)
pnnx_onnx_add_test(F_conv3d)
# pnnx_onnx_add_test(F_group_norm)
# pnnx_onnx_add_test(F_instance_norm)
pnnx_onnx_add_test(F_interpolate)
# pnnx_onnx_add_test(F_layer_norm)
pnnx_onnx_add_test(F_linear)
pnnx_onnx_add_test(F_local_response_norm)
pnnx_onnx_add_test(F_max_pool1d)
pnnx_onnx_add_test(F_max_pool2d)
pnnx_onnx_add_test(F_max_pool3d)
pnnx_onnx_add_test(F_pad)
pnnx_onnx_add_test(F_relu)
pnnx_onnx_add_test(F_sigmoid)
pnnx_onnx_add_test(F_softmax)
pnnx_onnx_add_test(F_upsample_bilinear)
pnnx_onnx_add_test(F_upsample_nearest)
pnnx_onnx_add_test(F_upsample)

pnnx_onnx_add_test(nn_AvgPool1d)
pnnx_onnx_add_test(nn_AvgPool2d)
pnnx_onnx_add_test(nn_AvgPool3d)
pnnx_onnx_add_test(nn_BatchNorm1d)
pnnx_onnx_add_test(nn_BatchNorm2d)
pnnx_onnx_add_test(nn_BatchNorm3d)
pnnx_onnx_add_test(nn_ConstantPad1d)
pnnx_onnx_add_test(nn_ConstantPad2d)
pnnx_onnx_add_test(nn_ConstantPad3d)
pnnx_onnx_add_test(nn_Conv1d)
pnnx_onnx_add_test(nn_Conv2d)
pnnx_onnx_add_test(nn_Conv3d)
pnnx_onnx_add_test(nn_ConvTranspose1d)
pnnx_onnx_add_test(nn_ConvTranspose2d)
pnnx_onnx_add_test(nn_ConvTranspose3d)
# pnnx_onnx_add_test(nn_GroupNorm)
# pnnx_onnx_add_test(nn_InstanceNorm1d)
# pnnx_onnx_add_test(nn_InstanceNorm2d)
# pnnx_onnx_add_test(nn_InstanceNorm3d)
# pnnx_onnx_add_test(nn_LayerNorm)
pnnx_onnx_add_test(nn_Linear)
pnnx_onnx_add_test(nn_LocalResponseNorm)
pnnx_onnx_add_test(nn_MaxPool1d)
pnnx_onnx_add_test(nn_MaxPool2d)
pnnx_onnx_add_test(nn_MaxPool3d)
pnnx_onnx_add_test(nn_ReflectionPad1d)
pnnx_onnx_add_test(nn_ReflectionPad2d)
pnnx_onnx_add_test(nn_ReLU)
pnnx_onnx_add_test(nn_ReplicationPad1d)
pnnx_onnx_add_test(nn_ReplicationPad2d)
pnnx_onnx_add_test(nn_ReplicationPad3d)
pnnx_onnx_add_test(nn_Sigmoid)
pnnx_onnx_add_test(nn_Softmax)
pnnx_onnx_add_test(nn_Upsample)
pnnx_onnx_add_test(nn_UpsamplingBilinear2d)
pnnx_onnx_add_test(nn_UpsamplingNearest2d)
pnnx_onnx_add_test(nn_ZeroPad2d)

pnnx_onnx_add_test(convnext_tiny)
pnnx_onnx_add_test(mobilenet_v2)
pnnx_onnx_add_test(mobilenet_v3_small)
pnnx_onnx_add_test(resnet18)
pnnx_onnx_add_test(shufflenet_v2_x1_0)
pnnx_onnx_add_test(squeezenet1_1)
pnnx_onnx_add_test(swin_t)
pnnx_onnx_add_test(vit_b_32)
