
find_package(Python3 REQUIRED COMPONENTS Interpreter)

macro(pnnx_onnx_add_test name)
    add_test(NAME test_onnx_${name} COMMAND ${CMAKE_COMMAND} -DPYTHON_EXECUTABLE=${Python3_EXECUTABLE} -DPYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/test_${name}.py -P ${CMAKE_CURRENT_SOURCE_DIR}/../run_test.cmake)
endmacro()

pnnx_onnx_add_test(F_avg_pool1d)
pnnx_onnx_add_test(F_avg_pool2d)
pnnx_onnx_add_test(F_avg_pool3d)
pnnx_onnx_add_test(F_batch_norm)
pnnx_onnx_add_test(F_celu)
pnnx_onnx_add_test(F_conv_transpose1d)
pnnx_onnx_add_test(F_conv_transpose2d)
pnnx_onnx_add_test(F_conv_transpose3d)
pnnx_onnx_add_test(F_conv1d)
pnnx_onnx_add_test(F_conv2d)
pnnx_onnx_add_test(F_conv3d)
pnnx_onnx_add_test(F_elu)
pnnx_onnx_add_test(F_gelu)
# pnnx_onnx_add_test(F_group_norm)
pnnx_onnx_add_test(F_hardshrink)
pnnx_onnx_add_test(F_hardsigmoid)
pnnx_onnx_add_test(F_hardswish)
pnnx_onnx_add_test(F_hardtanh)
# pnnx_onnx_add_test(F_instance_norm)
pnnx_onnx_add_test(F_interpolate)
pnnx_onnx_add_test(F_layer_norm)
pnnx_onnx_add_test(F_leaky_relu)
pnnx_onnx_add_test(F_linear)
pnnx_onnx_add_test(F_local_response_norm)
pnnx_onnx_add_test(F_logsigmoid)
pnnx_onnx_add_test(F_log_softmax)
pnnx_onnx_add_test(F_max_pool1d)
pnnx_onnx_add_test(F_max_pool2d)
pnnx_onnx_add_test(F_max_pool3d)
pnnx_onnx_add_test(F_mish)
pnnx_onnx_add_test(F_pad)
pnnx_onnx_add_test(F_prelu)
pnnx_onnx_add_test(F_relu)
pnnx_onnx_add_test(F_relu6)
pnnx_onnx_add_test(F_scaled_dot_product_attention)
pnnx_onnx_add_test(F_selu)
pnnx_onnx_add_test(F_sigmoid)
pnnx_onnx_add_test(F_silu)
pnnx_onnx_add_test(F_softmax)
pnnx_onnx_add_test(F_softmin)
pnnx_onnx_add_test(F_softplus)
pnnx_onnx_add_test(F_softshrink)
pnnx_onnx_add_test(F_softsign)
pnnx_onnx_add_test(F_tanh)
pnnx_onnx_add_test(F_tanhshrink)
pnnx_onnx_add_test(F_upsample_bilinear)
pnnx_onnx_add_test(F_upsample_nearest)
pnnx_onnx_add_test(F_upsample)

pnnx_onnx_add_test(nn_AvgPool1d)
pnnx_onnx_add_test(nn_AvgPool2d)
pnnx_onnx_add_test(nn_AvgPool3d)
pnnx_onnx_add_test(nn_BatchNorm1d)
pnnx_onnx_add_test(nn_BatchNorm2d)
pnnx_onnx_add_test(nn_BatchNorm3d)
pnnx_onnx_add_test(nn_CELU)
pnnx_onnx_add_test(nn_ConstantPad1d)
pnnx_onnx_add_test(nn_ConstantPad2d)
pnnx_onnx_add_test(nn_ConstantPad3d)
pnnx_onnx_add_test(nn_Conv1d)
pnnx_onnx_add_test(nn_Conv2d)
pnnx_onnx_add_test(nn_Conv3d)
pnnx_onnx_add_test(nn_ConvTranspose1d)
pnnx_onnx_add_test(nn_ConvTranspose2d)
pnnx_onnx_add_test(nn_ConvTranspose3d)
pnnx_onnx_add_test(nn_ELU)
pnnx_onnx_add_test(nn_GELU)
pnnx_onnx_add_test(nn_GroupNorm)
pnnx_onnx_add_test(nn_GRU)
pnnx_onnx_add_test(nn_Hardshrink)
pnnx_onnx_add_test(nn_Hardsigmoid)
pnnx_onnx_add_test(nn_Hardswish)
pnnx_onnx_add_test(nn_Hardtanh)
pnnx_onnx_add_test(nn_InstanceNorm1d)
pnnx_onnx_add_test(nn_InstanceNorm2d)
pnnx_onnx_add_test(nn_InstanceNorm3d)
pnnx_onnx_add_test(nn_LayerNorm)
pnnx_onnx_add_test(nn_LeakyReLU)
pnnx_onnx_add_test(nn_Linear)
pnnx_onnx_add_test(nn_LocalResponseNorm)
pnnx_onnx_add_test(nn_LogSigmoid)
pnnx_onnx_add_test(nn_LogSoftmax)
pnnx_onnx_add_test(nn_LSTM)
pnnx_onnx_add_test(nn_MaxPool1d)
pnnx_onnx_add_test(nn_MaxPool2d)
pnnx_onnx_add_test(nn_MaxPool3d)
pnnx_onnx_add_test(nn_Mish)
pnnx_onnx_add_test(nn_MultiheadAttention)
pnnx_onnx_add_test(nn_PReLU)
pnnx_onnx_add_test(nn_ReflectionPad1d)
pnnx_onnx_add_test(nn_ReflectionPad2d)
pnnx_onnx_add_test(nn_ReLU)
pnnx_onnx_add_test(nn_ReLU6)
pnnx_onnx_add_test(nn_ReplicationPad1d)
pnnx_onnx_add_test(nn_ReplicationPad2d)
pnnx_onnx_add_test(nn_ReplicationPad3d)
pnnx_onnx_add_test(nn_RNN)
pnnx_onnx_add_test(nn_SELU)
pnnx_onnx_add_test(nn_Sigmoid)
pnnx_onnx_add_test(nn_SiLU)
pnnx_onnx_add_test(nn_Softmax)
pnnx_onnx_add_test(nn_Softmin)
pnnx_onnx_add_test(nn_Softplus)
pnnx_onnx_add_test(nn_Softshrink)
pnnx_onnx_add_test(nn_Softsign)
pnnx_onnx_add_test(nn_Tanh)
pnnx_onnx_add_test(nn_Tanhshrink)
pnnx_onnx_add_test(nn_Upsample)
pnnx_onnx_add_test(nn_UpsamplingBilinear2d)
pnnx_onnx_add_test(nn_UpsamplingNearest2d)
pnnx_onnx_add_test(nn_ZeroPad2d)

pnnx_onnx_add_test(convnext_tiny)
pnnx_onnx_add_test(mobilenet_v2)
pnnx_onnx_add_test(mobilenet_v3_small)
pnnx_onnx_add_test(resnet18)
pnnx_onnx_add_test(shufflenet_v2_x1_0)
pnnx_onnx_add_test(squeezenet1_1)
pnnx_onnx_add_test(swin_t)
pnnx_onnx_add_test(vit_b_32)

pnnx_onnx_add_test(Tensor_expand)
pnnx_onnx_add_test(Tensor_permute)
pnnx_onnx_add_test(Tensor_repeat)
pnnx_onnx_add_test(Tensor_reshape)
pnnx_onnx_add_test(Tensor_select)
pnnx_onnx_add_test(Tensor_slice)
pnnx_onnx_add_test(Tensor_view)

pnnx_onnx_add_test(torch_cat)
pnnx_onnx_add_test(torch_ceil)
pnnx_onnx_add_test(torch_chunk)
pnnx_onnx_add_test(torch_flatten)
pnnx_onnx_add_test(torch_floor)
pnnx_onnx_add_test(torch_max)
pnnx_onnx_add_test(torch_maximum)
pnnx_onnx_add_test(torch_mean)
pnnx_onnx_add_test(torch_min)
pnnx_onnx_add_test(torch_minimum)
pnnx_onnx_add_test(torch_prod)
pnnx_onnx_add_test(torch_roll)
pnnx_onnx_add_test(torch_split)
pnnx_onnx_add_test(torch_squeeze)
pnnx_onnx_add_test(torch_stack)
pnnx_onnx_add_test(torch_sum)
pnnx_onnx_add_test(torch_transpose)
pnnx_onnx_add_test(torch_unbind)
pnnx_onnx_add_test(torch_unsqueeze)
